<resources>
    <string name="app_name">Everest Cab</string>
    <string name="your_trips">Your rides</string>
    <string name="terms_and_condition">Terms and Condition</string>
    <string name="language">Language</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="log_out">Log Out</string>
    <string name="notifications">Notifications</string>
    <string name="easy_pay">Easy Pay</string>
    <string name="user">User</string>
    <string name="reward">Rewards: 0 points</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="google_map_key" translatable="false">AIzaSyDhkIbe1V-Vojf3nwmErLLjr0UxjcJR3so</string>
    <string name="confirm_pickup">Confirm Pick-up</string>
    <string name="ok">Okay</string>
    <string name="permission_rationale">Location data is needed to continue.</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="confirm_drop_off">Confirm Drop Off</string>
    <string name="skip">Skip</string>
    <string name="details">+details</string>
    <string name="drop_text_hint">Where do you want to go?</string>
    <string name="final_confirm">Confirm Ride</string>
    <string name="contactUs">Contact Us</string>
    <string name="label_contact_address">Address</string>
    <string name="easyTaxiEmail">everestCabNepal@gmail.com</string>
    <string name="email">Email</string>
    <string name="label_contact_subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="label_button_subscribe">Subscribe</string>
    <string name="report_issue">Report Issue</string>
    <string name="send_email">Send Email</string>
    <string name="labe_easy_taxi">Everest Cab Nepal</string>
    <string name="driver_search_text">Finding Driver for you</string>
    <string name="easy_taxi">Everest Cab</string>
    <string name="help_for_blood">Help for Blood</string>
    <string name="select_language">Select Language</string>
    <string name="cancel">Cancel</string>
    <string name="logout_small">Log out</string>
    <string name="are_you_sure_to_log_out">Are you sure to Log out?</string>
    <string name="home">Home</string>
    <string name="work">work</string>
    <string name="alert">Alert</string>
    <string name="edit_number">Edit Number</string>
    <string name="otp_text">Verify yourself. \nWe\'ve sent a 4-digit code to </string>
    <string name="password_hint">Your password needs to be at least 8 characters long.</string>
    <string name="rate_driver">Rate Driver</string>
    <string name="driver_details">Driver Details</string>
    <string name="view_more"><![CDATA[View More >>]]></string>
    <string name="gender">Gender</string>
    <string name="trip_details">Trip Details</string>
    <string name="help">Help</string>
    <string name="no_service_available">Service Not Available</string>
    <string name="will_be_applied_second">will be applied.</string>
    <string name="cancellation_fee_first">Cancel Fee</string>
    <string name="rate_user">Rate Driver</string>
    <string name="PRICE_FARE_comment">Comment if Any</string>
    <string name="submit">Submit</string>
    <string name="driver_cancelled_request">Driver cancelled your request..</string>
    <string name="emergency">Emergency</string>
    <string name="driver_found_text">Ride Partner Assigned</string>
    <string name="error_sharing_details">Ride details couldn\'t be shared at the moment.</string>
    <string name="fareDetailText">Fare Details</string>
    <string name="fareText">Total Fare</string>
    <string name="serviceChargeText">Service Charge</string>
    <string name="vatText">Vat</string>
    <string name="totalText">Total Fare</string>
    <string name="grandTotalText">Grand Total</string>
    <string name="action">Action</string>
    <string name="permission_needed">Need Permissions</string>
    <string name="permission_reason">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="goto_settings">GOTO SETTINGS</string>
    <string name="promo">+ Promo</string>
    <string name="applying_promo">Applying Promo Code..</string>
    <string name="promo_applied">Code applied</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="ride_accepted">Accepted</string>
    <string name="driver_arrived">Arrived</string>
    <string name="ride_started">Started</string>
    <string name="rate_driver_and_finish">Finish and Rate Driver</string>
    <string name="error_cancel_ride">Couldn\'t cancel your ride.</string>
    <string name="name">Name</string>
    <string name="check_internet">Check internet connection...</string>
    <string name="re_enter_phone">Re-Enter your phone number to recover password.</string>
    <string name="request_otp">Request OTP</string>
    <string name="enter_valid_number">Enter a valid 10 digit phone.</string>
    <string name="enter_mobile_number">Enter your mobile number</string>
    <string name="enter_10_digit_mobile_number_to_create_an_account_or_login">Enter your 10 digit mobile number to create an account or login</string>
    <string name="proceed">Continue</string>
    <string name="error_registration">Error occurred during registration..</string>
    <string name="error_password_recover">Error occurred during password recovery..</string>
    <string name="at_least_eight_character">Password should be atleast 6 character long</string>
    <string name="password_not_matching">Two Passwords doesn\'t match</string>
    <string name="create_password">Create Password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="finish">Finish</string>
    <string name="booking_cancel">Booking Cancelled</string>
    <string name="booking_details">Payment Details</string>
    <string name="manage_ride">Manage Ride</string>
    <string name="status">Status:</string>
    <string name="contact_driver">Contact Driver</string>
    <string name="share_details">Share Details</string>
    <string name="error_logging">Error Logging you in..</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_the_password_you_set_for_easy_taxi">Enter the password of your account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="error">error</string>
    <string name="error_confirm">Couldn\'t confirm your ride.</string>
    <string name="move__marker">Move the marker to select a pickup point.</string>
    <string name="service_unavailable">Service Unavailable at this area.</string>
    <string name="location_permission_needed">Please give location permission</string>
    <string name="add_pickup_details">Add Pickup Details</string>
    <string name="input_promo">Input Promo Code</string>
    <string name="gps_required">Gps needed.</string>
    <string name="not_all_requirements_given">Location settings are inadequate, and cannot be fixed here. Fix in Settings.</string>
    <string name="cash">Cash</string>
    <string name="incorrect_otp">Incorrect pin.</string>
    <string name="enter_your_code">Enter your code</string>
    <string name="tell_us_little_bit_about_yourself">Tell us little bit about yourself</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_valid_name">Enter a valid first name.</string>
    <string name="valid_last_name">Enter a valid last name.</string>
    <string name="enter_full_name">Enter full Name</string>
    <string name="error_occured">Error occurred!</string>
    <string name="total_rides">Total Rides</string>
    <string name="years">Years</string>
    <string name="personal_information">Personal Information</string>
    <string name="erro_fetching_data">Error Fetching Data.</string>
    <string name="service_type">Service Type</string>
    <string name="trip_type">Trip Type</string>
    <string name="added_succesfully">Added Successfully!</string>
    <string name="save_location">Save Location</string>
    <string name="name_your_location">Name your Location</string>
    <string name="save">Save</string>
    <string name="permission_denied">Permission denied from google api console</string>
    <string name="search">Search</string>
    <string name="type_a_location">Type a location</string>
    <string name="popular_locations">Popular Locations</string>
    <string name="error_cancelling">Error cancelling ride.</string>
    <string name="in_progress">Ride is in progress..</string>
    <string name="book_a_ride">Book a Ride</string>
    <string name="cash_to_pay">Cash to be paid</string>
    <string name="verify_with_driver">Please verify this price with captain</string>
    <string name="view_receipt">View Receipt</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="error_booking">Error During Booking</string>
    <string name="apply_promo">Apply Code</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_finish">finish</string>
    <string name="update_later">Update Later.</string>
    <string name="vehicle_number">Vehicle Number:</string>
    <string name="enter_promo">Apply Promo Code</string>
    <string name="promo_hint">Enter code here...</string>
    <string name="next">next</string>
    <string name="you_rated">You Rated</string>
    <string name="bill_details">Bill Details</string>
    <string name="exit_app">Do you want to exit?</string>
    <string name="select_pick_up">पिकअप  पोइन्ट छनौट</string>
    <string name="select_pick_up_desc">पिकअप  स्थान छनौट  गर्नुहोस्</string>
    <string name="select_drop_point">ड्र्प  पोइन्ट छनौट</string>
    <string name="select_drop_point_d">ड्र्प  स्थान छनौट गर्नुहोस्</string>
    <string name="book_d">सवारी बूकिंग</string>
    <string name="booking_d_d">आफ्नो सवारी बुक गर्नुहोस्</string>
    <string name="evaluate_driver">चालक मूल्यांकन</string>
    <string name="evaluate_driver_d">चालक मूल्यांकन गरी समाप्त गर्नुहोस</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="ride_active">Ride is in Progress.</string>
    <string name="go_to_ride">Go to ride?</string>
    <string name="select_ride_type">Select Ride Type</string>
    <string name="fixed_ride">Fixed Ride</string>
    <string name="metered_ride">Metered Ride</string>
    <string name="ride_finished">Ride Finished !!!</string>
    <string name="finish_ride">Finish Ride</string>
    <string name="enter_code_enter">Enter the code and enter</string>
    <string name="ride_complete">Ride Complete</string>
    <string name="call">Call</string>
    <string name="share">Share</string>
    <string name="on_the_way">On the Way</string>
    <string name="on_ride">On Ride</string>
    <string name="ride_is_started">Ride Started</string>
    <string name="driver_is_arrived">Partner Arrived</string>
    <string name="nrs_only">NRs. Only</string>
    <string name="ride_fare">Ride Fare</string>
    <string name="distance_travelled">Distance Travelled:</string>
    <string name="ride_duration">Ride Duration:</string>
    <string name="back_to_dashboard">Back To Dashboard</string>
    <string name="ok_">OK</string>
    <string name="your_profile">Your Profile</string>
    <string name="total_balance">Total Balance</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="phone_number">Phone Number</string>
    <string name="save_changes">Save Changes</string>
</resources>