<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckUserPhoneActivity">


    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:id="@+id/backBtn"
        android:src="@drawable/ic_back"
        android:layout_margin="@dimen/mediumMargin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />


    <ProgressBar
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="gone"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_marginRight="5dp"
        android:indeterminate="true"
        android:max="100"
        android:progress="10"
        app:layout_constraintTop_toTopOf="@id/backBtn"
        app:layout_constraintLeft_toRightOf="@id/backBtn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/backBtn"
        />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enterMobileText"
        android:text="@string/personal_information"
        android:textSize="@dimen/heading1"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/normalMargin"
        android:layout_marginLeft="@dimen/normalMargin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBtn"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enterMobileTextNext"
        android:text="@string/tell_us_little_bit_about_yourself"
        android:textSize="@dimen/heading2"
        android:layout_marginLeft="@dimen/normalMargin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterMobileText"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputFirstName"
        android:inputType="text"
        android:hint="@string/first_name"
        android:background="@drawable/rounded_edit_text"
        android:layout_margin="@dimen/normalMargin"
        app:layout_constraintTop_toBottomOf="@id/enterMobileTextNext"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputLastName"
        android:inputType="text"
        android:hint="@string/last_name"
        android:background="@drawable/rounded_edit_text"
        android:layout_marginLeft="@dimen/normalMargin"
        android:layout_marginRight="@dimen/normalMargin"
        android:layout_marginTop="@dimen/mediumMargin"
        app:layout_constraintTop_toBottomOf="@id/inputFirstName"
        />



    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/continuePersonalInfo"
        android:text="@string/proceed"
        style="@style/raisedButton"
        android:background="@drawable/oval_background_button"
        android:layout_margin="@dimen/normalMargin"
        app:layout_constraintBottom_toBottomOf="parent"
        />





</androidx.constraintlayout.widget.ConstraintLayout>