<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_margin="16dp"
    android:background="@drawable/border_round_white_background">
    <TextView
        android:id="@+id/labelTextView"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/rate_user"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="20sp" />
    <RatingBar
        android:layout_below="@id/labelTextView"
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:rating="3"
        android:numStars="5"
        android:stepSize="1"
        android:theme="@style/RatingBar" />

    <EditText
        android:layout_below="@id/rating_bar"
        android:id="@+id/comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_edit_text"
        android:gravity="center|left"
        android:hint="@string/PRICE_FARE_comment"
        android:paddingLeft="10dp"
        android:singleLine="false"
        />
    <Button
        android:layout_below="@id/comments"
        android:id="@+id/ll_submit_rating"
        style="@style/SolidButtonStyle"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:text="@string/submit"
        android:textAllCaps="true" />
</RelativeLayout>