<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckUserPhoneActivity">


    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:id="@+id/backBtn"
        android:src="@drawable/ic_back"
        android:layout_margin="@dimen/mediumMargin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />


    <ProgressBar
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="gone"
        style="?android:attr/progressBarStyleHorizontal"
        android:indeterminate="true"
        android:max="100"
        android:progress="10"
        app:layout_constraintTop_toTopOf="@+id/backBtn"
        app:layout_constraintBottom_toBottomOf="@id/backBtn"
        app:layout_constraintLeft_toRightOf="@id/backBtn"
        app:layout_constraintRight_toRightOf="parent"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enterMobileText"
        android:text="@string/create_password"
        android:textSize="@dimen/heading1"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/normalMargin"
        android:layout_marginLeft="@dimen/normalMargin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBtn"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enterMobileTextNext"
        android:text="@string/password_hint"
        android:textSize="@dimen/heading2"
        android:layout_marginLeft="@dimen/normalMargin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterMobileText"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_margin="@dimen/normalMargin"
        app:layout_constraintTop_toBottomOf="@id/enterMobileTextNext"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputUserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:background="@drawable/rounded_corner_textview"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_margin="@dimen/normalMargin"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputConfirmUserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:background="@drawable/rounded_corner_textview"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>





    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerBtn"
        android:text="@string/finish"
        android:textSize="@dimen/heading1"
        android:textColor="@color/colorWhite"
        android:background="@color/colorAccent"
        android:layout_margin="@dimen/normalMargin"
        app:layout_constraintBottom_toBottomOf="parent"
        />






</androidx.constraintlayout.widget.ConstraintLayout>