<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/enter_promo"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:textSize="16dp" />
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/mediumMargin"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <EditText
                    android:id="@+id/inputPromo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:background="@drawable/rounded_edit_text"
                    android:hint="@string/promo_hint"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15dp" />

            </LinearLayout>



        </LinearLayout>

    </ScrollView>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="@dimen/mediumMargin"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:id="@+id/cancel_btn"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textSize="15dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:text="@string/apply_promo"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/apply_btn"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp" />



    </LinearLayout>
</LinearLayout>